@@ -3,6 +3,7 @@
 === New Features
 * open sources in a gem from the current gemset
 * ability to change the used completion function
+* rvm-open-gem creates a new perspective when perspective.el is loaded
 
 === Bugfixes
 
